--- a/ShopTemplate/Views/User/Login.cshtml
+++ b/ShopTemplate/Views/User/Login.cshtml
@@ -99,7 +99,7 @@
         <!--end::Input-->
     </div>
     <!--begin::Link-->
-    <a href="#" class="link-primary fs-6">Forgot password?</a>
+    <a asp-action="ForgotPassword" asp-controller="User" class="link-primary fs-6">Forgot password?</a>
     <!--end::Link-->
     
     <div class="validation-summary-valid" data-valmsg-summary="true" id="validationSummary"><p ></p></div>
